--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 					<b>Email</b>: <tt>jian-dylan.wang (at) connect.polyu.hk</tt> &nbsp or <br>
 					&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<tt>jwanglvy (at) gmail.com</tt> <br>
 					<br>
-					<a href="https://iwangjian.github.io/pdf/Jian_Wang_CV.pdf"><img src="pic/cv-96.png" height="25px" style="margin-bottom:-3px" >[Curriculum Vitae]</a> &nbsp
-					<a href="https://github.com/iwangjian"><img src="pic/github-96.png" height="25px" style="margin-bottom:-3px">[Github]</a> &nbsp
-					<a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en"><img src="pic/google-scholar-96.png" height="25px" style="margin-bottom:-3px">[Google Scholar]</a> &nbsp
-					<a href="https://twitter.com/jwanglvy"><img src="pic/twitter-90.png" height="25px" style="margin-bottom:-3px">[Twitter]</a>
+					<a href="https://iwangjian.github.io/pdf/Jian_Wang_CV.pdf"><img src="pic/cv-96.png" height="25px" style="margin-bottom:-5px"> Resume</a> &nbsp | &nbsp
+					<a href="https://github.com/iwangjian"><img src="pic/github-96.png" height="25px" style="margin-bottom:-5px"> Github</a> &nbsp | &nbsp
+					<a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en"><img src="pic/google-scholar-96.png" height="25px" style="margin-bottom:-5px"> Google Scholar</a> &nbsp | &nbsp
+					<a href="https://twitter.com/jwanglvy"><img src="pic/twitter-90.png" height="25px" style="margin-bottom:-5px"> Twitter</a>
 				
 				</p>
 			
@@ -46,12 +46,12 @@
 
 
 <p style="text-align:justify";>
-	I am a second-year PhD student at <a href="https://www.polyu.edu.hk/">The Hong Kong Polytechnic University (PolyU)</a>, 
+	I am a second-year PhD student at <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University (PolyU)</a>, 
 	advised by Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank"> Maggie Wenjie Li</a>.
-	Previously, I was a visiting student at <a href="http://english.siat.cas.cn/">SIAT, Chinese Academy of Sciences</a> 
+	Previously, I was a visiting student at <a href="http://english.siat.cas.cn/" target="_blank">SIAT, Chinese Academy of Sciences</a> 
 	from 2018 to 2019, advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a>.
 	I received my M.Eng. degree and B.Eng. degree from the School of Computer Science and Engineering, 
-	<a href="https://www.scut.edu.cn/en/">South China University of Technology (SCUT)</a> in 2020 and 2017, respectively. 
+	<a href="https://www.scut.edu.cn/en/" target="_blank">South China University of Technology (SCUT)</a> in 2020 and 2017, respectively. 
 </p>
 
 
@@ -71,8 +71,16 @@
 
 
 <h2> Selected Publications (<a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en">Full List</a>)</h2> 
-<p><b>2023</b></p>
+<p> 2021 - Present </p>
 <ul>
+	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<h3>Dialogue Planning via Brownian Bridge Stochastic Process for Goal-directed Proactive Dialogue</h3> 
+		<b>Jian Wang</b>, Dongding Lin, and Wenjie Li. <br>
+		<i>Findings of Annual Meeting of the Association for Computational Linguistics (ACL), 2023.</i> <br>
+		[<a href="">arXiv</a>] (TBA) &nbsp;
+		[<a href="">code</a>] (TBA)
+	    </p> 
+    </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>A Target-driven Planning Approach for Goal-directed Dialog Systems</h3> 
 		<b>Jian Wang</b>, Dongding Lin, and Wenjie Li. <br>
@@ -89,9 +97,6 @@
 		[<a href="https://github.com/DongdingLin/COLA">code</a>]
 	    </p> 
     </li>
-</ul>
-<p><b>Preprint</b></p>
-<ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Follow Me: Conversation Planning for Target-driven Recommendation Dialogue Systems</h3> 
 		<b>Jian Wang</b>, Dongding Lin, and Wenjie Li. <br> 
@@ -101,7 +106,8 @@
 	    </p> 
     </li>
 </ul>
-<p><b>2021 and Before</b></p>
+
+<p> 2018 - 2021 (Before PhD) </p>
 <ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Template-guided Clarifying Question Generation for Web Search Clarification</h3> 
@@ -144,15 +150,15 @@
 <h2> Experiences </h2>
 <ul>
 	<li> 
-		2020/11 - 2021/08: Research assistant at <a href="https://www.polyu.edu.hk/">PolyU</a>
+		2020/11 - 2021/08: Research assistant at <a href="https://www.polyu.edu.hk/" target="_blank">PolyU</a>
 		(Advisor: Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Maggie Wenjie Li</a>)
 	</li>
 	<li> 
-		2020/07 - 2020/10: Research intern at <a href="https://rul.ai/">Rulai Inc.</a>
+		2020/07 - 2020/10: Research intern at <a href="https://rul.ai/about-rulai/" target="_blank">Rulai Inc.</a>
 		(Advisor: Dr. <a href="https://www.linkedin.com/in/yizhang/" target="_blank">Yi Zhang</a>)
     </li>
     <li> 
-		2018/08 - 2019/09: Visiting student at <a href="http://english.siat.cas.cn/">SIAT, Chinese Academy of Sciences</a>
+		2018/08 - 2019/09: Visiting student at <a href="http://english.siat.cas.cn/" target="_blank">SIAT, Chinese Academy of Sciences</a>
 		(Advisor: Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a>)
 	</li>
 </ul>
@@ -214,7 +220,9 @@
 <ul style="list-style-type:none">
 
 	<li> <a href="https://aideadlin.es/?sub=ML,NLP,DM" target="_blank">⏳ AI Conference Deadlines</a>: Countdowns to top CV/NLP/ML/Robotics/AI conference deadlines. </li>
-	<li> <a href="https://www.bilibili.com/video/BV18v411n7mr" target="_blank">📝 Writing Perfect Papers</a>: A long talk on how to write perfect papers (by Prof. Baochun Li @UofT). </li>
+	<li> 📝 Writing Perfect Papers (<a href="https://www.bilibili.com/video/BV18v411n7mr/?spm_id_from=333.999.0.0" target="_blank">Bilibili</a> | 
+		<a href="https://www.youtube.com/watch?v=nUnmQmOOG4E" target="_blank">Youtube</a> |
+		<a href="https://iqua.ece.toronto.edu/papers/writing-perfect-papers-2021.pdf" target="_blank">Slides</a>): A long talk on writing "perfect papers" (by Prof. Baochun Li). </li>
 	<li> <a href="https://ruder.io/" target="_blank">📰 Sebastian Ruder's Blog</a>: Sebastian Ruder's blog with deep insights about NLP/ML/DL.</li>
 	<li> <a href="https://lilianweng.github.io/" target="_blank">🍑 Lilian Weng's Blog</a>:  Lilian Weng's blog with broad learning notes about DL/NLP.</li>
 	<li> <a href="https://jalammar.github.io/" target="_blank">📸 Jay Alammar's Blog</a>: Visualizations and animations for many language models (Transformer, BERT, etc). </li>
@@ -242,7 +250,7 @@
         </div>
 	<p>
 		<center>
-        <br> &copy; Jian Wang | Last update: Feb 2023
+        <br> 2020-2023 &copy; Jian Wang | Last updated: May 2023
 		</center>
 	</p>		
 </div>
