--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		Dongding Lin*, <b>Jian Wang</b>*, and Wenjie Li. &nbsp;&nbsp;&nbsp;&nbsp;(*: Equal Contribution) <br>
 		<i>AAAI Conference on Artificial Intelligence (AAAI), 2023.</i> <br>
 		[<a href="https://arxiv.org/abs/2212.07767">arXiv</a>]
-		[<a href="https://github.com/DongdingLin/COLA">code</a>]
+		[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/25567">paper</a>]
 	    </p> 
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
