--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 		<b>Jian Wang</b>, Dongding Lin, and Wenjie Li. <br>
 		<i>Findings of the Association for Computational Linguistics: ACL 2023.</i> <br>
 		[<a href="https://arxiv.org/abs/2305.05290">arXiv</a>]
+		[<a href="https://aclanthology.org/2023.findings-acl.25/">paper</a>]
 		[<a href="https://github.com/iwangjian/Color4Dial">code</a>]
 	    </p> 
     </li>
@@ -250,7 +251,7 @@
         </div>
 	<p>
 		<center>
-        <br> 2020-2023 &copy; Jian Wang | Last updated: May 2023
+        <br> 2020-2023 &copy; Jian Wang | Last updated: July 2023
 		</center>
 	</p>		
 </div>
