--- a/index.html
+++ b/index.html
@@ -57,13 +57,12 @@
 
 <h2>Research</h2>
 <p style="text-align:justify";>
-	I have broad interests in natural language processing (NLP), particularly in <b>dialogue systems</b> and <b>natural language generation</b>. 
-	I have the following long-term research goals:
+	I have broad interests in Natural Language Processing (NLP) and Conversational AI. Especially, I focus on the following directions: 
 	<ul>
-	<li> Building practical and intelligent dialogue systems. I am excited about simple and effective approaches that can 
-		be generalizable to real-world conversation scenarios.
+	<li> Building intelligent dialogue systems (e.g., goal/target-directed dialogues, situated dialogues) so that machines can interact with humans through natural 
+		conversations with proactive, diverse, and realistic interactions.
 	</li>
-	<li> Developing principled methods for natural language generation. I am interested in how human knowledge (e.g., factual, commonsense, etc.) 
+	<li> Developing principled methods for natural language generation. I am interested in how world knowledge (e.g., factual, commonsense) 
 		can be reasoned and used in natural language generation.
 	</li>
 	</ul>
