--- a/index.html
+++ b/index.html
@@ -46,12 +46,11 @@
 
 
 <p style="text-align:justify";>
-	I am a second-year PhD student at <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University (PolyU)</a>, 
+	I am a third-year PhD student at Department of Computing, <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University (PolyU)</a>, 
 	advised by Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank"> Maggie Wenjie Li</a>.
-	Previously, I was a visiting student at <a href="http://english.siat.cas.cn/" target="_blank">SIAT, Chinese Academy of Sciences</a> 
-	from 2018 to 2019, advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a>.
-	I received my MSc degree and BEng degree from School of Computer Science and Engineering, 
-	<a href="https://www.scut.edu.cn/en/" target="_blank">South China University of Technology (SCUT)</a> in 2020 and 2017, respectively. 
+	Before that, I received my MSc and BEng degrees from the School of Computer Science and Engineering, 
+	South China University of Technology, in 2020 and 2017, respectively. 
+	During the 2018 to 2019 period, I was co-advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a> at SIAT, Chinese Academy of Sciences.
 </p>
 
 
@@ -59,17 +58,24 @@
 <p style="text-align:justify";>
 	I have broad interests in Natural Language Processing (NLP) and Conversational AI. Especially, I focus on the following directions: 
 	<ul>
-	<li> Building intelligent dialogue systems (e.g., goal/target-directed dialogues, situated dialogues) so that machines can interact with humans through natural 
-		conversations with proactive, diverse, and realistic interactions.
+	<li> Interactive dialogue systems (e.g., goal/target-directed dialogues, task-oriented dialogues). I am dedicated to empowering machines
+		 to interact with humans through natural, coherent, and proactive conversations.
 	</li>
-	<li> Developing principled methods for natural language generation. I am interested in how world knowledge (e.g., factual, commonsense) 
-		can be reasoned and used in natural language generation.
+	<li>
+		Embodied and situated interactions. I am interested in enabling embodied agents to learn from situated communication (e.g., situated dialogues) 
+		with humans and collaborate with humans on complex tasks.
+	</li>
+	<li> Natural language generation. I am interested in how world knowledge (e.g., commonsense, factual, physical, and social knowledge) 
+		can be grounded and incorporated in natural language generation.
 	</li>
 	</ul>
 </p>
 
 
-<h2> Selected Publications (<a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en">Full List</a>)</h2> 
+<h2> Selected Publications  
+<h4>(see full list in <a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en">Google Scholar</a>)</h4>
+</h2>
+
 <p> 2021 - Present </p>
 <ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
@@ -219,7 +225,7 @@
 <h2>Useful Resources</h2>
 <ul style="list-style-type:none">
 
-	<li> <a href="https://aideadlin.es/?sub=ML,NLP,DM" target="_blank">⏳ AI Conference Deadlines</a>: Countdowns to top CV/NLP/ML/Robotics/AI conference deadlines. </li>
+	<li> <a href="https://aideadlin.es/?sub=ML,NLP,DM,KR,CV,CG,RO,SP,AP,HCI" target="_blank">⏳ AI Conference Deadlines</a>: Countdowns to top CV/NLP/ML/Robotics/AI conference deadlines. </li>
 	<li> 📝 Writing Perfect Papers (<a href="https://www.bilibili.com/video/BV18v411n7mr/?spm_id_from=333.999.0.0" target="_blank">Bilibili</a> | 
 		<a href="https://www.youtube.com/watch?v=nUnmQmOOG4E" target="_blank">Youtube</a> |
 		<a href="https://iqua.ece.toronto.edu/papers/writing-perfect-papers-2021.pdf" target="_blank">Slides</a>): A long talk on writing "perfect papers" (by Prof. Baochun Li). </li>
@@ -250,7 +256,7 @@
         </div>
 	<p>
 		<center>
-        <br> 2020-2023 &copy; Jian Wang | Last updated: July 2023
+        <br> 2020-2023 &copy; Jian Wang | Last updated: Sept. 2023
 		</center>
 	</p>		
 </div>
