--- a/index.html
+++ b/index.html
@@ -79,6 +79,22 @@
 <p> 2021 - Present </p>
 <ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<h3>Target-oriented Proactive Dialogue Systems with Personalization: Problem Formulation and Dataset Curation</h3> 
+		<b>Jian Wang</b>, Yi Cheng, Dongding Lin, Chak Tou Leong, and Wenjie Li. <br>
+		<i>Proceedings of the Conference on Empirical Methods in Natural Language Processing (EMNLP), 2023.</i> <br>
+		[<a href="">arXiv</a>] (TBA)
+		[<a href="">code</a>] (TBA)
+	    </p>
+    </li>
+	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<h3>Self-Detoxifying Language Models via Toxification Reversal</h3> 
+		Chak Tou Leong, Yi Cheng, Jiashuo Wang, <b>Jian Wang</b>, and Wenjie Li. <br>
+		<i>Proceedings of the Conference on Empirical Methods in Natural Language Processing (EMNLP), 2023.</i> <br>
+		[<a href="">arXiv</a>] (TBA)
+		[<a href="">code</a>] (TBA)
+	    </p>
+    </li>
+	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Dialogue Planning via Brownian Bridge Stochastic Process for Goal-directed Proactive Dialogue</h3> 
 		<b>Jian Wang</b>, Dongding Lin, and Wenjie Li. <br>
 		<i>Findings of the Association for Computational Linguistics: ACL 2023.</i> <br>
@@ -93,6 +109,7 @@
 		<i>IEEE Transactions on Neural Networks and Learning Systems (TNNLS), 2023.</i> <br>
 		[<a href="https://ieeexplore.ieee.org/document/10042178">paper</a>]
 		[<a href="https://iwangjian.github.io/pdf/TNNLS2023.wang.pdf">PDF</a>]
+		[<a href="https://github.com/iwangjian/Plan4RecDial">code</a>]
 	    </p> 
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
@@ -101,14 +118,6 @@
 		<i>AAAI Conference on Artificial Intelligence (AAAI), 2023.</i> <br>
 		[<a href="https://arxiv.org/abs/2212.07767">arXiv</a>]
 		[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/25567">paper</a>]
-	    </p> 
-    </li>
-	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
-		<h3>Follow Me: Conversation Planning for Target-driven Recommendation Dialogue Systems</h3> 
-		<b>Jian Wang</b>, Dongding Lin, and Wenjie Li. <br> 
-		<i>arXiv preprint arXiv:2208.03516, 2022</i> <br>
-		[<a href="https://arxiv.org/abs/2208.03516">arXiv</a>]
-		[<a href="https://github.com/iwangjian/Plan4RecDial">code</a>]
 	    </p> 
     </li>
 </ul>
@@ -256,7 +265,7 @@
         </div>
 	<p>
 		<center>
-        <br> 2020-2023 &copy; Jian Wang | Last updated: Sept. 2023
+        <br> 2020-2023 &copy; Jian Wang | Last updated: Oct. 2023
 		</center>
 	</p>		
 </div>
