--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Dialogue Planning via Brownian Bridge Stochastic Process for Goal-directed Proactive Dialogue</h3> 
 		<b>Jian Wang</b>, Dongding Lin, and Wenjie Li. <br>
-		<i>Findings of the Association for Computational Linguistics: ACL 2023.</i> <br>
+		<i>Findings of the Association for Computational Linguistics: ACL (ACL-Findings), 2023.</i> <br>
 		[<a href="https://arxiv.org/abs/2305.05290">arXiv</a>]
 		[<a href="https://aclanthology.org/2023.findings-acl.25/">paper</a>]
 		[<a href="https://github.com/iwangjian/Color4Dial">code</a>]
