--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 		<h3>Target-oriented Proactive Dialogue Systems with Personalization: Problem Formulation and Dataset Curation</h3> 
 		<b>Jian Wang</b>, Yi Cheng, Dongding Lin, Chak Tou Leong, and Wenjie Li. <br>
 		<i>Proceedings of the Conference on Empirical Methods in Natural Language Processing (EMNLP), 2023.</i> <br>
-		[<a href="">arXiv</a>] (TBA)
-		[<a href="">code</a>] (TBA)
+		[<a href="https://arxiv.org/abs/2310.07397">arXiv</a>]
+		[<a href="https://github.com/iwangjian/TopDial">code</a>]
 	    </p>
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
