--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 		<h3>Self-Detoxifying Language Models via Toxification Reversal</h3> 
 		Chak Tou Leong, Yi Cheng, Jiashuo Wang, <b>Jian Wang</b>, and Wenjie Li. <br>
 		<i>Proceedings of the Conference on Empirical Methods in Natural Language Processing (EMNLP), 2023.</i> <br>
-		[<a href="">arXiv</a>] (TBA)
-		[<a href="">code</a>] (TBA)
+		[<a href="https://arxiv.org/abs/2310.09573">arXiv</a>]
+		[<a href="https://github.com/cooperleong00/ToxificationReversal">code</a>]
 	    </p>
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
