--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	advised by Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank"> Maggie Wenjie Li</a>.
 	Before that, I received my MSc and BEng degrees from the School of Computer Science and Engineering, 
 	South China University of Technology, in 2020 and 2017, respectively. 
-	During the 2018 to 2019 period, I was co-advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a> at SIAT, Chinese Academy of Sciences.
+	During the 2018 to 2019 period, I was fortunate to be co-advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a> at SIAT, Chinese Academy of Sciences.
 </p>
 
 
@@ -61,13 +61,14 @@
 	<li> Interactive dialogue systems (e.g., goal/target-directed dialogues, task-oriented dialogues). I am dedicated to empowering machines
 		 to interact with humans through natural, coherent, and proactive conversations.
 	</li>
-	<li>
-		Embodied and situated interactions. I am interested in enabling embodied agents to learn from situated communication (e.g., situated dialogues) 
-		with humans and collaborate with humans on complex tasks.
-	</li>
 	<li> Natural language generation. I am interested in how world knowledge (e.g., commonsense, factual, physical, and social knowledge) 
 		can be grounded and incorporated in natural language generation.
 	</li>
+	<li>
+		Situated and multimodal interactions. I am interested in human-AI collaborations on complex tasks and 
+		learning from situated communications (e.g., situated dialogues).
+	</li>
+	
 	</ul>
 </p>
 
