--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 		<b>Jian Wang</b>, Yi Cheng, Dongding Lin, Chak Tou Leong, and Wenjie Li. <br>
 		<i>Proceedings of the Conference on Empirical Methods in Natural Language Processing (EMNLP), 2023.</i> <br>
 		[<a href="https://arxiv.org/abs/2310.07397">arXiv</a>]
+		[<a href="https://aclanthology.org/2023.emnlp-main.72/">paper</a>]
 		[<a href="https://github.com/iwangjian/TopDial">code</a>]
 	    </p>
     </li>
@@ -91,6 +92,7 @@
 		Chak Tou Leong, Yi Cheng, Jiashuo Wang, <b>Jian Wang</b>, and Wenjie Li. <br>
 		<i>Proceedings of the Conference on Empirical Methods in Natural Language Processing (EMNLP), 2023.</i> <br>
 		[<a href="https://arxiv.org/abs/2310.09573">arXiv</a>]
+		[<a href="https://aclanthology.org/2023.emnlp-main.269/">paper</a>]
 		[<a href="https://github.com/cooperleong00/ToxificationReversal">code</a>]
 	    </p>
     </li>
