--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
 <p> 2021 - Present </p>
 <ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<h3>COOPER: Coordinating Specialized Agents towards a Complex Dialogue Goal</h3> 
+		Yi Cheng, Wenge Liu, <b>Jian Wang</b>, Chak Tou Leong, Yi Ouyang, Wenjie Li, Xian Wu, and Yefeng Zheng. <br>
+		<i>AAAI Conference on Artificial Intelligence (AAAI), 2024.</i> <br>
+		[<a href="https://arxiv.org/abs/2312.11792">arXiv</a>]
+		[<a href="https://github.com/YiCheng98/Cooper">code</a>]
+	    </p>
+    </li>
+	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Target-oriented Proactive Dialogue Systems with Personalization: Problem Formulation and Dataset Curation</h3> 
 		<b>Jian Wang</b>, Yi Cheng, Dongding Lin, Chak Tou Leong, and Wenjie Li. <br>
 		<i>Proceedings of the Conference on Empirical Methods in Natural Language Processing (EMNLP), 2023.</i> <br>
@@ -264,7 +272,7 @@
 	<div id="footer-text"></div>
         <p><center>
       	<div id="clustrmaps-widget" style="width:10%">
-		<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=wqRaVUI2MAtD2jUaE9nacGIJuhOtnMyYPFP9kaKVCrs"></script>
+			<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=m&d=wqRaVUI2MAtD2jUaE9nacGIJuhOtnMyYPFP9kaKVCrs&co=7caaca&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
         </div>
 	<p>
 		<center>
