--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
 <div id="footer">
 	<div id="footer-text"></div>
         <p><center>
-      	<div id="clustrmaps-widget" style="width:10%">
-			<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=m&d=wqRaVUI2MAtD2jUaE9nacGIJuhOtnMyYPFP9kaKVCrs&co=7caaca&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
+      	<div id="clustrmaps-widget" >
+			<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=080808&w=a&t=n&d=wqRaVUI2MAtD2jUaE9nacGIJuhOtnMyYPFP9kaKVCrs&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=808080"></script>
         </div>
 	<p>
 		<center>
