--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
 <h4>(see full list in <a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en">Google Scholar</a>)</h4>
 </h2>
 
+<p> Preprint </p>
+<ul>
+	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<h3>Instruct Once, Chat Consistently in Multiple Rounds: An Efficient Tuning Framework for Dialogue</h3> 
+		<b>Jian Wang</b>, Chak Tou Leong, Jiashuo Wang, Dongding Lin, Wenjie Li, and Xiao-Yong Wei. <br>
+		<i>arXiv:2402.06967, 2024.</i> <br>
+		[<a href="https://arxiv.org/abs/2402.06967">arXiv</a>]
+	    </p>
+	</li>
+</ul>
+
 <p> 2021 - Present </p>
 <ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
@@ -276,7 +287,7 @@
         </div>
 	<p>
 		<center>
-        <br> 2020-2023 &copy; Jian Wang | Last updated: Dec. 2023
+        <br> 2020-2024 &copy; Jian Wang | Last updated: Feb. 2024
 		</center>
 	</p>		
 </div>
