--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
 <p style="text-align:justify";>
 	I am a third-year PhD student at Department of Computing, <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University (PolyU)</a>, 
 	advised by Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank"> Maggie Wenjie Li</a>.
+	I am currently visiting the <a href="https://sled.eecs.umich.edu/" target="_blank">SLED Lab</a> at <a href="https://umich.edu/" target="_blank">University of Michigan</a>,
+	fortunately co-advised by Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">Joyce Y. Chai</a>.
+	
+</p>
+<p style="text-align:justify";>
 	Before that, I received my MSc and BEng degrees from the School of Computer Science and Engineering, 
 	South China University of Technology, in 2020 and 2017, respectively. 
 	During the 2018 to 2019 period, I was fortunate to be co-advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a> at SIAT, Chinese Academy of Sciences.
@@ -186,6 +191,10 @@
 
 <h2> Experiences </h2>
 <ul>
+	<li> 
+		2024/02 - Present: Visiting PhD Student at <a href="https://umich.edu/" target="_blank">University of Michigan</a>
+		(Advisor: Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">	Joyce Y. Chai</a>)
+	</li>
 	<li> 
 		2020/11 - 2021/08: Research assistant at <a href="https://www.polyu.edu.hk/" target="_blank">PolyU</a>
 		(Advisor: Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Maggie Wenjie Li</a>)
