--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	I am a third-year PhD student at Department of Computing, <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University (PolyU)</a>, 
 	advised by Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank"> Maggie Wenjie Li</a>.
 	I am currently visiting the <a href="https://sled.eecs.umich.edu/" target="_blank">SLED Lab</a> at <a href="https://umich.edu/" target="_blank">University of Michigan</a>,
-	fortunately co-advised by Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">Joyce Y. Chai</a>.
+	fortunately co-advised by Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">Joyce Chai</a>.
 	
 </p>
 <p style="text-align:justify";>
