--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 <ul>
 	<li> 
 		2024/02 - Present: Visiting PhD Student at <a href="https://umich.edu/" target="_blank">University of Michigan</a>
-		(Advisor: Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">	Joyce Y. Chai</a>)
+		(Advisor: Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">	Joyce Chai</a>)
 	</li>
 	<li> 
 		2020/11 - 2021/08: Research assistant at <a href="https://www.polyu.edu.hk/" target="_blank">PolyU</a>
