--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 	I am a third-year PhD student at Department of Computing, <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University (PolyU)</a>, 
 	advised by Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank"> Maggie Wenjie Li</a>.
 	I am currently visiting the <a href="https://sled.eecs.umich.edu/" target="_blank">SLED Lab</a> at <a href="https://umich.edu/" target="_blank">University of Michigan</a>,
-	fortunately co-advised by Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">Joyce Chai</a>.
+	fortunately working with Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">Joyce Chai</a>.
 	
 </p>
 <p style="text-align:justify";>
 	Before that, I received my MSc and BEng degrees from the School of Computer Science and Engineering, 
-	South China University of Technology, in 2020 and 2017, respectively. 
+	<a href="https://www.scut.edu.cn/en/" target="_blank">South China University of Technology (SCUT)</a>, in 2020 and 2017, respectively. 
 	During the 2018 to 2019 period, I was fortunate to be co-advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a> at SIAT, Chinese Academy of Sciences.
 </p>
 
@@ -63,7 +63,7 @@
 <p style="text-align:justify";>
 	I have broad interests in Natural Language Processing (NLP) and Conversational AI. Especially, I focus on the following directions: 
 	<ul>
-	<li> Interactive dialogue systems (e.g., goal/target-directed dialogues, task-oriented dialogues). I am dedicated to empowering machines
+	<li> Interactive dialogue systems (e.g., goal/target-directed dialogues, task-oriented dialogues). I am dedicated to empowering agents
 		 to interact with humans through natural, coherent, and proactive conversations.
 	</li>
 	<li> Natural language generation. I am interested in how world knowledge (e.g., commonsense, factual, physical, and social knowledge) 
