--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
 <p> 2021 - Present </p>
 <ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<h3>Target-constrained Bidirectional Planning for Generation of Target-oriented Proactive Dialogue</h3> 
+		<b>Jian Wang</b>, Dongding Lin, and Wenjie Li. <br>
+		<i>ACM Transactions on Information Systems (TOIS), 2024.</i> <br>
+		[<a href="">paper</a>] (TBA)
+		[<a href="">code</a>] (TBA)
+	    </p>
+    </li>
+	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>COOPER: Coordinating Specialized Agents towards a Complex Dialogue Goal</h3> 
 		Yi Cheng, Wenge Liu, <b>Jian Wang</b>, Chak Tou Leong, Yi Ouyang, Wenjie Li, Xian Wu, and Yefeng Zheng. <br>
 		<i>AAAI Conference on Artificial Intelligence (AAAI), 2024.</i> <br>
