--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 		<h3>Target-constrained Bidirectional Planning for Generation of Target-oriented Proactive Dialogue</h3> 
 		<b>Jian Wang</b>, Dongding Lin, and Wenjie Li. <br>
 		<i>ACM Transactions on Information Systems (TOIS), 2024.</i> <br>
-		[<a href="">paper</a>] (TBA)
-		[<a href="">code</a>] (TBA)
+		[<a href="https://arxiv.org/abs/2403.06063">arXiv</a>]
+		[<a href="https://github.com/iwangjian/TRIP">code</a>]
 	    </p>
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
