--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
 
 <p style="text-align:justify";>
-	I am a third-year PhD student at Department of Computing, <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University (PolyU)</a>, 
+	I am a third-year PhD student at <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University</a>, 
 	advised by Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank"> Maggie Wenjie Li</a>.
-	I am currently visiting the <a href="https://sled.eecs.umich.edu/" target="_blank">SLED Lab</a> at <a href="https://umich.edu/" target="_blank">University of Michigan</a>,
-	fortunately working with Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">Joyce Chai</a>.
+	Currently, I am visiting the <a href="https://sled.eecs.umich.edu/" target="_blank">SLED Lab</a> at <a href="https://umich.edu/" target="_blank">University of Michigan</a>,
+	where I am honored to work with Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">Joyce Chai</a>.
 	
 </p>
 <p style="text-align:justify";>
@@ -61,7 +61,7 @@
 
 <h2>Research</h2>
 <p style="text-align:justify";>
-	I have broad interests in Natural Language Processing (NLP) and Conversational AI. Especially, I focus on the following directions: 
+	I have broad interests in Conversational AI and Natural Language Processing (NLP), including but not limited to the following directions: 
 	<ul>
 	<li> Interactive dialogue systems (e.g., goal/target-directed dialogues, task-oriented dialogues). I am dedicated to empowering agents
 		 to interact with humans through natural, coherent, and proactive conversations.
@@ -70,7 +70,7 @@
 		can be grounded and incorporated in natural language generation.
 	</li>
 	<li>
-		Situated and multimodal interactions. I am interested in human-AI collaborations on complex tasks and 
+		Embodied and multimodal interactions. I am interested in human-AI collaborations on complex tasks and 
 		learning from situated communications (e.g., situated dialogues).
 	</li>
 	
@@ -212,7 +212,7 @@
 		(Advisor: Dr. <a href="https://www.linkedin.com/in/yizhang/" target="_blank">Yi Zhang</a>)
     </li>
     <li> 
-		2018/08 - 2019/09: Visiting student at <a href="http://english.siat.cas.cn/" target="_blank">SIAT, Chinese Academy of Sciences</a>
+		2018/08 - 2019/09: Visiting graduate student at <a href="http://english.siat.cas.cn/" target="_blank">SIAT, Chinese Academy of Sciences</a>
 		(Advisor: Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a>)
 	</li>
 </ul>
