--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 		<b>Jian Wang</b>, Dongding Lin, and Wenjie Li. <br>
 		<i>ACM Transactions on Information Systems (TOIS), 2024.</i> <br>
 		[<a href="https://arxiv.org/abs/2403.06063">arXiv</a>]
+		[<a href="https://doi.org/10.1145/3652598">paper</a>]
 		[<a href="https://github.com/iwangjian/TRIP">code</a>]
 	    </p>
     </li>
@@ -108,6 +109,7 @@
 		Yi Cheng, Wenge Liu, <b>Jian Wang</b>, Chak Tou Leong, Yi Ouyang, Wenjie Li, Xian Wu, and Yefeng Zheng. <br>
 		<i>AAAI Conference on Artificial Intelligence (AAAI), 2024.</i> <br>
 		[<a href="https://arxiv.org/abs/2312.11792">arXiv</a>]
+		[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/29739">paper</a>]
 		[<a href="https://github.com/YiCheng98/Cooper">code</a>]
 	    </p>
     </li>
@@ -304,7 +306,7 @@
         </div>
 	<p>
 		<center>
-        <br> 2020-2024 &copy; Jian Wang | Last updated: Feb. 2024
+        <br> 2020-2024 &copy; Jian Wang | Last updated: Mar. 2024
 		</center>
 	</p>		
 </div>
