--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 	<li> Interactive dialogue systems (e.g., goal/target-directed dialogues, task-oriented dialogues). I am dedicated to empowering agents
 		 to interact with humans through natural, coherent, and proactive conversations.
 	</li>
-	<li> Natural language generation. I am interested in how world knowledge (e.g., commonsense, factual, physical, and social knowledge) 
+	<li> Natural language generation. I am interested in how world knowledge (e.g., commonsense, social, and physical knowledge) 
 		can be grounded and incorporated in natural language generation.
 	</li>
 	<li>
-		Embodied and multimodal interactions. I am interested in human-AI collaborations on complex tasks and 
+		Situated and multimodal interactions. I am interested in human-AI collaborations in specific scenarios and 
 		learning from situated communications (e.g., situated dialogues).
 	</li>
 	
