--- a/index.html
+++ b/index.html
@@ -257,17 +257,17 @@
 	</ul>
 	
 <p style="margin-left: 0px; line-height: 120%; margin-top: 15px; margin-bottom: 15px;">
-    <strong>  Conference Reviewer </strong> <br> 
+    <strong> Reviewer </strong> <br> 
 </p>
 	<ul style="list-style-type:none">
-		<li>ACL (2023), EMNLP (2022, 2023), COLING (2020, 2022)</li>
+		<li>ACL ARR, ACL (2023), EMNLP (2022, 2023), COLING (2020, 2022)</li>
 	</ul>
 	
 <p style="margin-left: 0px; line-height: 120%; margin-top: 15px; margin-bottom: 15px;">
     <strong> Open-Source Projects </strong> <br>
 </p>
 	<ul style="list-style-type:none">
-		<li><a href="https://github.com/iwangjian/Paper-Reading">📖 Paper-Reading</a>: Reading list in dialogue systems and natural language generation (constantly updating 🤗).</li>
+		<li><a href="https://github.com/iwangjian/Paper-Reading-ConvAI">📖 Paper-Reading-ConvAI</a>: Reading list in dialogue systems and natural language generation.</li>
 		<li><a href="https://github.com/iwangjian/pyloader">🐳 PyLoader</a>: An asynchronous Python dataloader for loading big datasets.</li>
 	</ul>
 
