--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
     <strong> Reviewer </strong> <br> 
 </p>
 	<ul style="list-style-type:none">
-		<li>ACL ARR, ACL (2023), EMNLP (2022, 2023), COLING (2020, 2022)</li>
+		<li>Conferences: ACL Rolling Review (ARR), ACL (2023, 2024), EMNLP (2022, 2023), COLING (2020, 2022)</li>
+		<li>Journal: Transactions on Knowledge and Data Engineering (TKDE)</li>
 	</ul>
 	
 <p style="margin-left: 0px; line-height: 120%; margin-top: 15px; margin-bottom: 15px;">
